# Tweezer

./: .gitignore  README.md  pyproject.toml  requirements.txt
Tweezer/: tweezer.py
Tweezer/GhidraBridge/: ghidra_bridge.py
Tweezer/Training/: trainer.py
tweezer/: model.py  trainer.py  tweezer.py
