[tool.poetry]
name = "tweezer"
version = "0.1.0"
description = "A binary analysis tool for identifying unknown function names, using a word2vec-model"
authors = ["user1342 <28961606+user1342@users.noreply.github.com>"]
maintainers = [
    "user1342",
    "blos"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/user1342/Tweezer"
keywords = ["machine-learning", "word2vec", "reverse-engineering", "embeddings", "embeddings-models", "ghidra"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
exclude = [
    "example_tweezer.mdl",
    "tweezer.gif",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.16.1"
tensorflow-io-gcs-filesystem = "0.31.0" # needed for windows, see: https://discuss.tensorflow.org/t/tensorflow-io-gcs-filesystem-with-windows/18849
numpy = "^1.26.4"
gensim = "^4.3.2"
nltk = "^3.8.1"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"
scipy = "<1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
